💄 Fix text alignement for nav on desktop

--- a/src/style.styl
+++ b/src/style.styl
@@ -350,7 +350,7 @@ nav
 			justify-content end
 			margin-right 2rem
 			margin-bottom 5rem
-		
+
 		ul li
 			padding 0
 			text-align right
@@ -387,6 +387,7 @@ nav
 	nav:not(.inline) ul li
 		padding 0
 		padding-bottom 0.2em
+		text-align right
 
 	nav:not(.inline) ul li a
 		font-size 1.3em
